--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
     <link rel="stylesheet" href="..//proyecto_leon/css/styles.css" />
   </head>
   <body>
-    <h1>Aqui vamos hacer el blogpost</h1>
-    <p>y este es el parrafo de inicio</p>
+    <div id="container">
+      <div id="post">
+        <h1>este el titulo atractivo e interesante del post</h1>
+        <p>
+          y este es el parrafo fe inicio donde vamos a explicar las cosas
+          increibles que se puede hacer conr ramas.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
