--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="container">
+      <div><b>Cabecera</b></div>
       <div id="post">
         <h1>este el titulo atractivo e interesante del post</h1>
         <p>
