ultima modificacion de css y blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="container">
+      <div id="maestro">SOY TU MAESTRO</div>
       <div id="post">
         <h1>este el titulo atractivo e interesante del post</h1>
         <p>
@@ -15,6 +16,7 @@
           bueno aqui estoy basicamente en el master agregando el contenido
           adicional.
         </p>
+        <p>TAMBIEN ESTOY AGREGANDO COSAS A MASTER</p>
       </div>
     </div>
   </body>
