cambiamos finalmente a una nueva version

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>BIENVENIDO A HYPERBLOG</title>
+    <title>BIENVENIDO A HYPERBLOG V.0.2</title>
     <link rel="stylesheet" href="..//proyecto_leon/css/styles.css" />
   </head>
   <body>
